--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@ai-sdk/google": "^3.0.30",
     "@ai-sdk/openai": "^3.0.30",
     "@anthropic-ai/sandbox-runtime": "^0.0.37",
+    "@cyanheads/git-mcp-server": "^2.8.4",
     "@modelcontextprotocol/sdk": "^1.26.0",
     "@utcp/code-mode": "^1.2.11",
     "@utcp/mcp": "^1.1.1",
@@ -64,8 +65,8 @@
     "marked": "^15.0.12",
     "marked-terminal": "^7.3.0",
     "ora": "^9.3.0",
-    "@cyanheads/git-mcp-server": "^2.8.4",
     "shell-quote": "^1.8.3",
+    "turndown": "^7.2.2",
     "uuid": "^13.0.0",
     "zod": "^4.3.6"
   },
@@ -73,6 +74,7 @@
     "@eslint/js": "^9.39.2",
     "@types/node": "^22.0.0",
     "@types/shell-quote": "^1.7.5",
+    "@types/turndown": "^5.0.6",
     "@types/uuid": "^10.0.0",
     "eslint": "^9.39.2",
     "tsx": "^4.19.0",
