--- a/package.json
+++ b/package.json
@@ -77,13 +77,16 @@
     "uuid": "^13.0.0",
     "zod": "^4.3.6"
   },
+  "overrides": {
+    "minimatch": "^10.2.1"
+  },
   "devDependencies": {
-    "@eslint/js": "^9.39.2",
+    "@eslint/js": "^10.0.1",
     "@types/node": "^22.0.0",
     "@types/shell-quote": "^1.7.5",
     "@types/turndown": "^5.0.6",
     "@types/uuid": "^10.0.0",
-    "eslint": "^9.39.2",
+    "eslint": "^10.0.1",
     "eslint-config-prettier": "^10.1.8",
     "prettier": "^3.8.1",
     "tsx": "^4.19.0",
